--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div class="header-wrap">
       <header class="header">
         <div class="header-top">
-          <a class="logo__link" href="#">
+          <a href="#">
             <img
-              class="logo__img"
+              class="logo"
               src="img/logo.png"
               alt="Tajam - креативное агентство"
             />
           </a>
 
-          <ul>
+          <ul class="menu">
             <li>
               <a href="#">Главная</a>
             </li>
