--- a/index.html
+++ b/index.html
@@ -56,5 +56,26 @@
         </div>
       </header>
     </div>
+
+    <main class="content">
+      <article class="history">
+        <img class="imgleft" src="img/history.jpg" alt="" />
+        <div class="history-text">
+          <h2>Наша история</h2>
+          <p>
+            Разрабатываем коммуникационные стратегии, которые позволяют бизнесу
+            устойчиво развиваться. Разрабатываем
+            <a href="#">нестандартные решения</a> для бизнеса, которые
+            обязательно решают клиентскую задачу.
+          </p>
+          <p>
+            Внедряем передовые, проверенные и работающие технологии, которые
+            реально работают. Создаем и настраиваем отдел продаж, который
+            приносит прибыль и не требует ежедневного контроля
+          </p>
+          <p><a class="link-button" href="#">Подробнее</a></p>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
