--- a/index.html
+++ b/index.html
@@ -76,6 +76,39 @@
           <p><a class="link-button" href="#">Подробнее</a></p>
         </div>
       </article>
+
+      <div class="form">
+        <h2>Напишите нам</h2>
+        <div class="form-block">
+          <form action="#" method="GET">
+            <input
+              class="input__txt"
+              type="text"
+              name="name"
+              placeholder="Имя"
+            />
+            <input
+              class="input__txt"
+              type="email"
+              name="emai"
+              placeholder="Email"
+            />
+            <input
+              class="input__txt"
+              type="text"
+              name="subject"
+              placeholder="Тема"
+            />
+            <textarea
+              class="textarea__txt"
+              name="message"
+              placeholder="Сообщение"
+            >
+            </textarea>
+            <button class="button">Отправить</button>
+          </form>
+        </div>
+      </div>
     </main>
   </body>
 </html>
