--- a/index.html
+++ b/index.html
@@ -110,5 +110,14 @@
         </div>
       </div>
     </main>
+
+    <div class="footer-wrap">
+      <footer class="footer">
+        <a href="#">
+          <img class="footer-logo" src="img/logo.png" alt="" />
+        </a>
+        <p>Copyright © 2021 - Tajem Creative</p>
+      </footer>
+    </div>
   </body>
 </html>
